@@ -88,6 +88,7 @@ Strikes and Spares (Free Play+)
 Theatre of Magic 1.3XC (competition MOD) (replaces older Theatre of Magic 1.5C (competition MOD))
 Tom & Jerry (unofficial MOD of Hollywood Heat)
 Wheel of Fortune 6.02 (Home Rom)
+WWF Royal Rumble (1.03 French)
 
 
 
